# voxel-engine

./: CMakeLists.txt  README.md
src/: main.c  prev.txt
src/Glad/: glad.h
src/Octree/: octree.c  octree.h
src/glad/: glad.c
src/octree/: octree.h
src/shaders/: shader.frag
